; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_GetCurrentTransactionStopTimestamp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_GetCurrentTransactionStopTimestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xactStopTimestamp = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @GetCurrentTransactionStopTimestamp() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @xactStopTimestamp, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i64, i64* @xactStopTimestamp, align 8
  store i64 %5, i64* %1, align 8
  br label %8

6:                                                ; preds = %0
  %7 = call i64 (...) @GetCurrentTimestamp()
  store i64 %7, i64* %1, align 8
  br label %8

8:                                                ; preds = %6, %4
  %9 = load i64, i64* %1, align 8
  ret i64 %9
}

declare dso_local i64 @GetCurrentTimestamp(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
